--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -14,11 +14,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <com.google.firebase.udacity.thezechat.CustomImageView
+            android:id="@+id/activity.user.profile_image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_margin="16dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@drawable/image_user_default"/>
 
         <LinearLayout
             android:layout_width="match_parent"
