--- a/app/src/main/res/layout/contact_view.xml
+++ b/app/src/main/res/layout/contact_view.xml
@@ -2,54 +2,62 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contact.view.main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/colorWhite"
-    >
+    android:background="@color/colorWhite">
 
     <com.google.firebase.udacity.thezechat.utils.CustomImageView
-        android:layout_height="90dp"
-        android:layout_width="90dp"
-        android:id="@+id/ImageProfile"
-        android:src="@drawable/image_user_default"
-        />
+        android:id="@+id/contact.view.profile_image"
+        android:layout_height="54dp"
+        android:layout_width="54dp"
+        android:layout_margin="16dp"
+        android:src="@drawable/image_user_default" />
 
     <LinearLayout
-        android:layout_width="210dp"
-        android:layout_height="90dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/NomContact"
-            android:text="@string/default_name"
-            android:textStyle="bold"
-            android:textColor="@color/colorBlack"
-            android:textSize="20dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginStart="10dp"
-            />
+            android:layout_marginTop="16dp">
+
+            <TextView
+                android:id="@+id/contact.view.name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/default_name"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/contact.view.last_message_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="date"
+                android:layout_gravity="center_vertical|end"/>
+
+        </FrameLayout>
 
         <TextView
+            android:id="@+id/contact.view.last_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/DernierTxt"
             android:text="@string/last_conversation_summary"
             android:textColor="@color/colorGrey"
-            android:textSize="16dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="35dp"
-            />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/Date"
-        android:text="@string/last_contact_time"
-        />
+    <View android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorGrey"/>
 
 </LinearLayout>
